// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public surface is frozen > api.ts exports exactly the expected names > api-exports 1`] = `
[
  "CallbackSchema",
  "DERIVED_DIALECTS",
  "FUNCTION_SIGNATURES",
  "HARVESTED_SIGNATURES",
  "LineIndex",
  "Lineage",
  "SqlDocument",
  "TypeInfo",
  "analyze",
  "complete",
  "completeAt",
  "deriveSymbols",
  "dialectSymbols",
  "displayName",
  "foldIdentifier",
  "hasSignature",
  "lineage",
  "lineageAt",
  "lineageOf",
  "lookupSignature",
  "originsOfExpr",
  "parse",
  "qualify",
  "referencesAt",
  "resolveDialect",
  "signatureAt",
  "toAst",
  "toScopes",
  "tokenize",
]
`;

exports[`public surface is frozen > index.ts exports exactly the expected names > index-exports 1`] = `
[
  "CallbackSchema",
  "DERIVED_DIALECTS",
  "DbtTemplateProvider",
  "DefaultTemplateProvider",
  "FUNCTION_SIGNATURES",
  "HARVESTED_SIGNATURES",
  "LineIndex",
  "Lineage",
  "MAIN_FRAME",
  "NO_OUTPUT_BUILTINS",
  "OPEN_PROVIDER",
  "Schema",
  "SqlDocument",
  "SqlSession",
  "TypeInfo",
  "allQueryExprs",
  "analyze",
  "childExprs",
  "coarseKind",
  "complete",
  "completeAt",
  "deriveSymbols",
  "dialectSymbols",
  "displayName",
  "endPosition",
  "foldIdentifier",
  "formatType",
  "hasSignature",
  "inferType",
  "lineage",
  "lineageAt",
  "lineageOf",
  "lookupSignature",
  "lowerBigQuery",
  "lowerDatabricks",
  "lowerDuckdb",
  "lowerMysql",
  "lowerPostgres",
  "lowerRedshift",
  "lowerSnowflake",
  "lowerSqlite",
  "lowerTSql",
  "lowerTrino",
  "nodeAt",
  "originsOfExpr",
  "parse",
  "parseBigQuery",
  "parseDatabricks",
  "parseDuckdb",
  "parseMysql",
  "parsePostgres",
  "parseRedshift",
  "parseSnowflake",
  "parseSqlite",
  "parseTSql",
  "parseTrino",
  "parseType",
  "partSpanOf",
  "partSpansOf",
  "qualify",
  "referencesAt",
  "resolveDialect",
  "resolveScopes",
  "scopeOf",
  "signatureAt",
  "symbolAt",
  "toAst",
  "toScopes",
  "tokenize",
  "walk",
  "walkExprs",
]
`;

exports[`public surface is frozen > public function arities are unchanged > api-fn-arities 1`] = `
{
  "CallbackSchema": 1,
  "LineIndex": 1,
  "Lineage": 1,
  "SqlDocument": 4,
  "TypeInfo": 1,
  "analyze": 2,
  "complete": 3,
  "completeAt": 3,
  "deriveSymbols": 2,
  "dialectSymbols": 1,
  "displayName": 2,
  "foldIdentifier": 2,
  "hasSignature": 2,
  "lineage": 2,
  "lineageAt": 3,
  "lineageOf": 3,
  "lookupSignature": 2,
  "originsOfExpr": 3,
  "parse": 2,
  "qualify": 2,
  "referencesAt": 4,
  "resolveDialect": 1,
  "signatureAt": 3,
  "toAst": 2,
  "toScopes": 1,
  "tokenize": 2,
}
`;
